--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -138,14 +138,11 @@
                 </div>
 
                 <!-- 3- Social Links -->
-                <div class="col-lg-2 align-self-center">
+                <div class="col-lg-4 align-self-center d-flex justify-content-end">
                     <div class="header-social-links">
                         @@include('components/socials.html')
                     </div>
-                </div>
 
-                <!-- 4- Authenticator -->
-                <div class="col-lg-2 align-self-center">
                     <div class="header-auth dropdown">
                         <button type="button" class="auth" data-bs-toggle="dropdown">
                             <div class="auth-info">
