--- a/src/scss/layouts/_navbar.scss
+++ b/src/scss/layouts/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
     .navbar-collapse {
         background-color: #fff;
-        box-shadow: 0 0 22px rgba(0,0,0,.1);
+        // box-shadow: 0 0 22px rgba(0,0,0,.1);
         padding: 8px 12px;
     }
 
