--- a/src/html/components/offcanvas.html
+++ b/src/html/components/offcanvas.html
@@ -3,7 +3,7 @@
     <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="addToCartCanvasLabel">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1">
                     <path fill="currentColor"
                         d="M19.5 22a1.5 1.5 0 1 0 0-3a1.5 1.5 0 0 0 0 3m-10 0a1.5 1.5 0 1 0 0-3a1.5 1.5 0 0 0 0 3" />
                     <path
@@ -100,5 +100,79 @@
             <span class="total-price">$10.50</span>
         </p>
         <button type="button" class="button button-primary w-100 mt-3 justify-content-center">Checkout</button>
+    </div>
+</div>
+
+<!-- Sidebar Canvas Informations -->
+<div class="offcanvas side-canvas-info offcanvas-end" tabindex="-1" id="sideCanvasInfo" aria-labelledby="sideCanvasInfoLabel">
+    <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="sideCanvasInfoLabel">
+            @@include('components/logo.html')
+        </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+
+    <div class="offcanvas-body d-flex flex-column justify-content-around">
+        <div class="socials border-bottom pb-4 ">
+            <h6>Keep In Touch:</h6>
+            @@include('components/socials.html')
+        </div>
+
+        <div class="contact-info border-bottom pb-4 ">
+            <h6>Contacts Us:</h6>
+
+            <div class="d-flex mb-4">
+                <div class="flex-shrink-0 me-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+                        <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5L15 13l5 2v4a2 2 0 0 1-2 2A16 16 0 0 1 3 6a2 2 0 0 1 2-2m10 3a2 2 0 0 1 2 2m-2-6a6 6 0 0 1 6 6" />
+                    </svg>
+                </div>
+                <div class="flex-grow-1">
+                    <span class="d-block small text-muted mb-1">24/7 Support</span>
+                    <a href="tel:+201080720455" class="fw-semibold">(+2)010 80 720 455</a>
+                </div>
+            </div>
+
+            <div class="d-flex mb-4">
+                <div class="flex-shrink-0 me-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+                        <g fill="none" stroke="currentColor" stroke-width="1">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="m7 9l5 3.5L17 9" />
+                            <path d="M2 17V7a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2Z" />
+                        </g>
+                    </svg>
+                </div>
+                <div class="flex-grow-1">
+                    <span class="d-block small text-muted mb-1">Send Message</span>
+                    <a href="mailto:ahmed.elsewailky@gmail.com" class="fw-semibold">ahmed.elsewailky@gmail.com</a>
+                </div>
+            </div>
+
+            <div class="d-flex mb-4">
+                <div class="flex-shrink-0 me-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+                        <path fill="none" stroke="currentColor" stroke-width="1" d="M3 8.71c0-1.474 0-2.21.393-2.64a1.5 1.5 0 0 1 .497-.36c.532-.236 1.231-.003 2.629.463c1.067.356 1.6.534 2.14.515a3 3 0 0 0 .588-.078c.525-.125.993-.437 1.929-1.06l1.382-.922c1.2-.8 1.799-1.2 2.487-1.291c.688-.093 1.372.135 2.739.591l1.165.388c.99.33 1.485.495 1.768.888S21 6.12 21 7.162v8.129c0 1.473 0 2.21-.393 2.64a1.5 1.5 0 0 1-.497.358c-.532.237-1.231.004-2.629-.462c-1.067-.356-1.6-.534-2.14-.515a3 3 0 0 0-.588.078c-.525.125-.993.437-1.929 1.06l-1.382.922c-1.2.8-1.799 1.2-2.487 1.291c-.688.093-1.372-.135-2.739-.591l-1.165-.388c-.99-.33-1.485-.495-1.768-.888S3 17.88 3 16.838zm6-2.071V20.5M15 3v14" />
+                    </svg>
+                </div>
+                <div class="flex-grow-1">
+                    <span class="d-block small text-muted mb-1">Our Locati0n</span>
+                    <p class="fw-semibold">23 Naser City, Cairo, Egypt</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="subscribe">
+            <h6>Subscribe Now</h6>
+            <form action="/" method="get" class="text-center">
+                <input type="email" class="form-control" placeholder="Enter your mail">
+                <button type="button" class="button button-primary w-100 justify-content-center">Subscribe 
+                    <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1" d="m14 16l4-4m0 0l-4-4m4 4H6" />
+                        </svg>
+                    </span>
+                </button>
+            </form>
+        </div>
     </div>
 </div>
