--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-lg-6 align-self-center">
                     <div class="hero-text">
-                        <h2>Best <span>Online</span> Platform to Learn Everything</h2>
+                        <h2>Best <span>Online</span> Platform to Learn <span id="changing-text">Everything</span></h2>
                         <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
                         <a href="html/course-1.html" class="button button-primary">
                             <span>
