--- a/src/scss/layouts/_navbar.scss
+++ b/src/scss/layouts/_navbar.scss
@@ -44,7 +44,7 @@
     }
 
     .shopping-cart span {
-        background-color: var(--primary-color);
+        background-color: #E91E63;
         color: white;
         position: absolute;
         width: 16px;
