--- a/src/html/includes/scripts.html
+++ b/src/html/includes/scripts.html
@@ -1,4 +1,5 @@
 <!-- Javascript Files, Plugins & Libraries -->
 <script src="@@BASE_URL/assets/libs/jquery/jquery-3.7.1.min.js"></script>
 <script src="@@BASE_URL/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="@@BASE_URL/assets/js/main.js"></script>
