Fixing all header responsive issues

--- a/src/html/layouts/navbar.html
+++ b/src/html/layouts/navbar.html
@@ -198,7 +198,7 @@
                             support@gmail.com
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-none d-lg-block">
                         <button type="button" class="button shopping-cart" data-bs-toggle="offcanvas"
                             href="#addToCartCanvas">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -212,7 +212,7 @@
                             <span>3</span>
                         </button>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-none d-lg-block">
                         <button type="button" class="button sidebar-info-button" data-bs-toggle="offcanvas"
                             data-bs-target="#sideCanvasInfo">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
