--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -4,13 +4,6 @@
             <div class="row">
                 <!-- 1- Logo -->
                 <div class="header-left col col-lg-2 d-flex align-self-center">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#navbarMainMenu">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                            <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.5 6.5h15M4.5 12h15m-15 5.5h15" />
-                        </svg>
-                    </button>
-
                     @@include('components/logo.html')
                 </div>
 
@@ -137,7 +130,7 @@
                         @@include('components/socials.html')
                     </div>
 
-                    <button type="button" class="button shopping-cart" data-bs-toggle="offcanvas"
+                    <button type="button" class="button shopping-cart d-lg-none" data-bs-toggle="offcanvas"
                         href="#addToCartCanvas">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -150,8 +143,15 @@
                         <span>3</span>
                     </button>
 
-                    <button type="button" class="button sidebar-info-button" data-bs-toggle="offcanvas"
+                    <button type="button" class="button sidebar-info-button d-lg-none" data-bs-toggle="offcanvas"
                         data-bs-target="#sideCanvasInfo">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path fill="currentColor" d="M12.002 1.999c5.523 0 10.001 4.478 10.001 10.002c0 5.523-4.478 10.001-10.001 10.001C6.478 22.002 2 17.524 2 12.001C2 6.477 6.478 1.999 12.002 1.999m0 1.5a8.502 8.502 0 1 0 0 17.003a8.502 8.502 0 0 0 0-17.003M12 10.5a.75.75 0 0 1 .75.75v5a.75.75 0 0 1-1.5 0v-5a.75.75 0 0 1 .75-.75M12 9a1 1 0 1 0 0-2a1 1 0 0 0 0 2" />
+                        </svg>
+                    </button>
+
+                    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#navbarMainMenu">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path fill="currentColor"
                                 d="M22 18.005c0 .55-.446.995-.995.995h-8.01a.995.995 0 0 1 0-1.99h8.01c.55 0 .995.445.995.995M22 12c0 .55-.446.995-.995.995H2.995a.995.995 0 1 1 0-1.99h18.01c.55 0 .995.446.995.995m-.995-5.01a.995.995 0 0 0 0-1.99H8.995a.995.995 0 1 0 0 1.99z" />
@@ -160,10 +160,6 @@
 
                     <div class="header-auth dropdown">
                         <button type="button" class="auth" data-bs-toggle="dropdown">
-                            <!-- <div class="auth-info">
-                                <h6>A. Elsewailky</h6>
-                                <span>Fullstack</span>
-                            </div> -->
                             <div class="auth-image">
                                 <img src="@@BASE_URL/assets/images/avatars/avatar-1.png" alt="Auth Avatar Image">
                             </div>
