--- a/src/scss/layouts/_hero.scss
+++ b/src/scss/layouts/_hero.scss
@@ -60,16 +60,25 @@
     position: absolute;
     transition: transform 0.1s linear;
     pointer-events: none;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
 }
 
 img.floating-img.book {
     left: 54%;
-    bottom: 20px;
+    bottom: 80px;
+}
+
+img.floating-img.circle {
+    top: 0;
+    z-index: -1;
+    opacity: 0.1;
 }
 
 img.floating-img.red-plus {
     top: 40%;
-    left: 45%;
+    left: 52%;
 }
 
 img.floating-img.crown {
@@ -79,11 +88,107 @@ img.floating-img.crown {
 }
 
 img.floating-img.dots {
-    top: 180px;
-    right: 30px;
+    top: 152px;
+    right: 12%;
+    z-index: -1;
 }
 
+.dots {
+    animation-name: moveUpDown;
+}
 
+.red-plus {
+    animation-name: moveLeftRight;
+}
+
+.book {
+    animation-name: rotateScale;
+}
+
+.crown {
+    animation-name: diagonalMove;
+}
+
+/* حركة من أعلى لأسفل */
+@keyframes moveUpDown {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(30px);
+    }
+}
+
+/* حركة من اليسار لليمين */
+@keyframes moveLeftRight {
+
+    0%,
+    100% {
+        transform: translateX(0);
+    }
+
+    50% {
+        transform: translateX(30px);
+    }
+}
+
+/* دوران مع تحجيم */
+@keyframes rotateScale {
+
+    0%,
+    100% {
+        transform: rotate(0deg) scale(1);
+    }
+
+    50% {
+        transform: rotate(15deg) scale(1.1);
+    }
+}
+
+/* حركة قطرية */
+@keyframes diagonalMove {
+
+    0%,
+    100% {
+        transform: translate(0, 0);
+    }
+
+    50% {
+        transform: translate(20px, -20px);
+    }
+}
+
+.hero-text .button {
+    border-radius: 4px;
+    padding: 4px 18px;
+    display: inline-flex;
+    margin-top: 7px;
+}
+
+.hero-text .button span {
+    display: inline-grid;
+    place-content: center;
+    border-radius: 4px;
+    margin-right: 8px;
+    height: 36px;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s;
+    margin-left: -30px;
+}
+
+.hero-text .button:hover span {
+    margin-left: 0;
+    opacity: 1;
+    visibility: visible;
+}
+
+.hero-text .button:hover {
+    background-color: var(--primary-color);
+}
 
 @media (max-width: 992px) {
     .app-header {
@@ -92,9 +197,18 @@ img.floating-img.dots {
     }
 
     .hero-text h2 {
-        font-size: 32px;
+        font-size: 24px;
         font-weight: 500;
         text-transform: capitalize;
+        line-height: 38px;
+    }
+
+    .hero-text p {
+        font-size: 13px;
+        margin: 14px 0;
+        text-transform: capitalize;
+        line-height: 24px;
+        opacity: 0.65;
     }
 
     .hero-section {
@@ -103,8 +217,8 @@ img.floating-img.dots {
 
     .hero-text h2 span#changing-text {
         font-weight: 300;
-        display: inline-block;
-        height: auto;
+        display: block;
+        height: 46px;
     }
 
     .hero-image::before {
@@ -112,62 +226,34 @@ img.floating-img.dots {
         content: "";
         width: 100%;
         height: 320px;
+        top: 22px;
     }
 
     .hero-image img {
-        height: 340px;
-        top: -50px;
-    }
-
-    .hero-text .button {
-        border-radius: 50px;
-        padding: 9px 22px;
-    }
-
-    .hero-text .button span {
-        display: inline-grid;
-        place-content: center;
-        background-color: white;
-        border-radius: 50px;
-        margin-right: 8px;
-        width: 36px;
-        height: 36px;
-        transform: translateX(-100%);
-        opacity: 0;
-        visibility: hidden;
-        width: 0;
-        transition: 0.3s;
-    }
-
-    .hero-text .button span svg {
-        color: var(--primary-color);
-    }
-
-    .hero-text .button:hover span {
-        width: 36px;
-        transform: translateX(0);
-        opacity: 1;
-        visibility: visible;
-    }
-
-    .hero-text .button:hover {
-        background-color: var(--primary-color);
+        height: 330px;
+        top: 10%;
     }
 
     img.floating-img.dots {
-        top: 43%;
+        top: 50%;
         right: 30px;
-    }
-
-    img.floating-img.crown {
-        top: 70%;
-        right: 16%;
         z-index: 1;
     }
 
-    img.floating-img.book {
-        left: 14%;
-        bottom: 11%;
-        z-index: 9;
+    img.floating-img.book,
+    img.floating-img.crown {
+        display: none;
+    }
+
+    img.floating-img.red-plus {
+        top: 60%;
+        left: 4%;
+        z-index: 1;
+    }
+
+    img.floating-img.circle {
+        top: -20px;
+        width: 45%;
+        left: -20px;
     }
 }
