--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,15 +1,14 @@
 $colors: (
-    "primary":   #5352ed,
-    "warning":   #ff7f50,
-    "success":   #2ed573,
-    "danger":    #ff4757,
-    "dark":      #000000,
-    "light":     #a4b0be,
-    "info":      #1e90ff
+    "blue": #2563EB,
+    "amber": #FBBF24,
+    "amerald": #22C55E,
+    "red": #EF4444,
+    "dark": #334155,
+    "light": #CBD5E1,
+    "cyan": #22D3EE,
+    "lime": #A3E635,
+    "violet": #8B5CF6,
+    "purple": #A855F7,
+    "rose": #F43F5E,
+    "orange": #F97316,
 );
-
-$fontSize: 14px;
-
-$borderColor: #e5e7eb;
-
-$borderRaduis: 4px;
