--- a/src/scss/layouts/_navbar.scss
+++ b/src/scss/layouts/_navbar.scss
@@ -1,245 +1,210 @@
-// Navbar style on larg screen
-@media screen and (min-width: 992px) {
-    .navbar {
-        .offcanvas {
-            background-color: #fff !important;
-            padding: 8px 12px;
+.navbar {
+    .offcanvas {
+        background-color: #fff !important;
+        padding: 14px 12px;
+        border-radius: var(--border-radius-size);
+
+        @media (max-width: 992px) {
+            overflow: hidden;
+            width: 300px;
+            padding: 0;
         }
 
-        .dropdown-menu {
-            display: block;
-            transition: 0.3s;
-            transform: translateY(10px);
-            visibility: hidden;
-            opacity: 0;
-            padding: 1rem;
+        &-header {
+            border-bottom: .0625rem solid rgba(0, 0, 0, 0.1);
+            padding: 0 24px;
+            height: 47px;
         }
 
-        .dropdown:hover>.dropdown-menu {
-            cursor: pointer;
-            opacity: 1;
-            visibility: visible;
-            transform: translateY(0);
-        }
-
-        .nav-link {
-            font-weight: 600;
-            text-transform: uppercase;
-            pointer-events: none;
-            padding: 8px 12px !important;
-            position: relative;
-
-            &::before {
-                content: "";
-                position: absolute;
-                height: 14px;
-                width: 1px;
-                background: linear-gradient(45deg, #f2ea71, #c1ecc3);
-                left: 0;
-                top: 50%;
-                transform: translateY(-50%);
+        @media (max-width: 992px) {
+            &-body {
+                padding: 0;
             }
         }
+    }
 
-        .nav-item:first-of-type .nav-link::before {
-            content: none;
+    .dropdown-menu {
+        opacity: 0;
+        border: none;
+        padding: 16px;
+        display: block;
+        border-radius: .25rem;
+        font-size: inherit;
+        visibility: hidden;
+        transform: translateY(.625rem);
+        box-shadow: 0 0 1.0625rem rgba(0, 0, 0, 0.1);
+        transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+        .dropdown-menu {
+            left: 100%;
+            top: 0;
         }
 
-        span.count {
-            background-color: #00BCD4;
+        @media (max-width: 992px) {
             position: absolute;
-            width: 18px;
-            height: 18px;
-            border-radius: 50px;
-            font-size: 13px;
-            color: white;
-            right: 10px;
-            top: 11px;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            background-color: #fff;
+            box-shadow: none;
+            transform: translateX(100%);
+            transition: transform 0.3s ease-in-out;
+            opacity: 1;
+            visibility: visible;
+
+            &.show {
+                transform: translateX(0);
+            }
+        }
+    }
+
+    .dropdown:hover>.dropdown-menu {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+    }
+
+    .dropdown-item {
+        display: flex;
+        padding: 8px 16px;
+        font-size: inherit;
+        align-items: center;
+        text-transform: capitalize;
+        color: rgba(0, 0, 0, 0.8);
+        justify-content: space-between;
+        transition: background 0.3s ease, color 0.3s ease;
+
+        &.active,
+        &.active:hover {
+            color: #fff;
+            background-color: var(--dark-color);
         }
 
-        .shopping-cart {
-            position: relative;
+        &:hover {
+            color: var(--dark-color);
+            background-color: #F1F5F9;
         }
 
-        .shopping-cart span {
-            background-color: #E91E63;
-            color: white;
+        &.dropdown-toggle::after {
+            transform: rotate(-90deg);
+        }
+
+        @media (max-width: 992px) {
+            padding: 16px 24px 16px 42px;
+            border-bottom: .0625rem solid rgba(0, 0, 0, 0.1);
+            font-weight: 600;
+
+            &.active {
+                position: relative;
+                background-color: rgba(0, 0, 0, 0.03);
+                color: var(--amber-color);
+
+                &::after {
+                    content: '✔';
+                    position: absolute;
+                    left: 16px;
+                    top: 50%;
+                    transform: translateY(-50%);
+                }
+
+                &:hover,
+                &:active {
+                    background-color: transparent;
+                }
+            }
+        }
+    }
+
+    .dropdown-toggle::after {
+        border-width: .25rem;
+        opacity: 0.7;
+        margin-left: 8px;
+
+        @media (max-width: 992px) {
+            display: inline-block;
+            margin-left: 0.255em;
+            content: "";
+            border-top: .25rem solid;
+            border-right: .25rem solid transparent;
+            border-bottom: 0;
+            border-left: .25rem solid transparent;
+        }
+    }
+
+    .nav-item {
+        cursor: pointer;
+        position: relative;
+
+        &::after {
+            content: "";
             position: absolute;
-            width: 16px;
-            border-radius: 50px;
-            height: 16px;
-            font-size: 11px;
-            left: 32px;
-            top: 10px;
+            height: .875rem;
+            width: .0625rem;
+            background: linear-gradient(45deg, #f2ea71, #c1ecc3);
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
         }
+
+        &:first-of-type::after {
+            display: none;
+        }
+    }
+
+    .nav-link {
+        text-transform: uppercase;
+        padding: 8px 16px !important;
+
+        @media (max-width: 992px) {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            border-bottom: .0625rem solid rgba(0, 0, 0, 0.1);
+            padding: 16px 24px;
+            color: #000;
+            font-weight: 600;
+
+            &::after {
+                transform: rotate(-90deg);
+            }
+        }
+    }
+
+    .notify-count {
+        top: .1875rem;
+        left: 28px;
+        width: 15px;
+        height: 17px;
+        font-size: 10px;
+        color: #fff;
+        position: absolute;
+        border-radius: 50%;
+        background-color: var(--main-color);
     }
 
     .dropdown-menu-heading {
         display: none;
+
+        @media (max-width: 992px) {
+            display: flex;
+            align-items: center;
+            border-bottom: .0625rem solid rgba(0, 0, 0, 0.1);
+            justify-content: space-between;
+            height: 45px;
+        }
     }
 }
 
-@media (max-width: 1024px) {
-
-    .navbar-nav .phone,
-    .navbar-nav .mail {
-        display: none;
-    }
-}
-
-
-@media screen and (max-width: 991px) {
-    nav.navbar.navbar-expand-lg {
+@media (max-width: 991px) {
+    .navbar {
         padding: 0;
-    }
-
-    .offcanvas {
-        overflow: hidden;
-        width: 300px !important;
-    }
-
-    .offcanvas-header {
-        box-shadow: none;
-        border-bottom: 1px solid rgba(0, 0, 0, .1);
-        padding: 0 24px;
-        height: 47px;
     }
 
     .btn-close:focus {
         outline: 0;
         box-shadow: none;
-        opacity: var(--bs-btn-close-focus-opacity);
-    }
-
-    .navbar .navbar-nav .nav-link {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        border-bottom: 1px solid rgba(0, 0, 0, .1);
-        padding: 16px 24px;
-        color: #000;
-        font-weight: 600;
-
-    }
-
-    .navbar .navbar-nav .nav-item {
-        width: 100%;
-    }
-
-    .navbar .offcanvas-body {
-        padding: 0;
-    }
-
-    .navbar .navbar-nav .nav-link::after {
-        transform: rotate(-90deg);
-    }
-
-    .navbar .dropdown-menu {
-        top: 0;
-        left: 0;
-        opacity: 1;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        display: block;
-        box-shadow: none;
-        position: absolute;
-        visibility: visible;
-        background-color: #fff;
-        transform: translateX(100%);
-        transition: transform .3s ease-in-out;
-    }
-
-    .navbar .dropdown .dropdown-menu {
-        z-index: 2;
-    }
-
-
-    .navbar .dropdown-menu.show {
-        transform: translateX(0);
-        margin: 0;
-    }
-
-    .navbar .navbar-nav .dropdown {
-        position: static;
-    }
-
-    .navbar .dropdown-menu .dropdown-item {
-        padding: 16px 24px 16px 42px;
-        border-bottom: 1px solid rgba(0, 0, 0, .1);
-        font-weight: 600;
-    }
-
-    .navbar .navbar-nav .dropdown-menu-heading {
-        display: flex;
-        align-items: center;
-        border-bottom: 1px solid rgba(0, 0, 0, .1);
-        justify-content: space-between;
-        height: 45px;
-    }
-
-    .navbar .navbar-nav .dropdown-menu-heading .btn-back {
-        margin-right: 16px;
-        border-right: 1px solid rgba(0, 0, 0, .1);
-        cursor: pointer;
-        padding: 0 16px;
-        height: 100%;
-        display: inline-grid;
-        place-content: center;
-    }
-
-    .navbar .navbar-nav .dropdown-menu-heading svg {
-        width: 19px;
-    }
-
-    .navbar .navbar-nav .dropdown-menu-heading .btn-close-canvas {
-        padding: 16px;
-        border-left: 1px solid rgba(0, 0, 0, .1);
-        cursor: pointer;
-        height: 100%;
-        display: inline-grid;
-        place-content: center;
-    }
-
-    .dropdown-item.active::after {
-        content: '✔';
-        position: absolute;
-        left: 16px;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-
-    .dropdown-item.active {
-        position: relative;
-        background-color: rgb(0, 0, 0, 0.03);
-    }
-
-    .dropdown-item.active,
-    .dropdown-item.active:hover,
-    .dropdown-item:active {
-        color: var(--warning-color);
-        background-color: transparent;
-    }
-
-    .navbar .dropdown .dropdown-menu.visible {
-        transform: translateX(0);
-    }
-
-    .navbar .navbar-nav .nav-link:hover,
-    .dropdown-item:hover {
-        color: var(--warning-color);
-        background-color: transparent;
-    }
-
-    .dropdown-toggle::after {
-        display: inline-block;
-        margin-left: .255em;
-        vertical-align: .255em;
-        content: "";
-        border-top: 4px solid;
-        border-right: 4px solid transparent;
-        border-bottom: 0;
-        border-left: 4px solid transparent;
     }
 }
